--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,8 +13,8 @@ jobs:
 
     steps:
     
-    - name: Installing MinGW
-      uses: egor-tensin/setup-mingw@v2
+    - name: Installing Compiler
+      uses: egor-tensin/setup-gcc@v1
       
     - name: Checkout
       uses: actions/checkout@v2
