--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     
     - name: Installing Compiler
-      uses: egor-tensin/setup-gcc@v1
+      uses: JohelEGP/gcc-snapshot@v1.0.0
       
     - name: Checkout
       uses: actions/checkout@v2
