--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,7 +16,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Installation
-      uses: egor-tensin/setup-gcc@v1
+      uses: egor-tensin/setup-mingw@v1
+      
+    - name: Check
+      run: g++ --version
       
     - name: Compile Separated Values
       working-directory: ./CSV/sv
